ORC-313: Check subtype count of LIST, MAP and UNION types

Fixes #229

Signed-off-by: Deepak Majeti <mdeepak@apache.org>